--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,12 @@ jobs:
       run: cargo install wasm-pack
     - name: Build
       run: wasm-pack build --target web
-    - uses: actions/upload-artifact@v4
+    - run: echo ${{ github.event.release }}
+    - run: echo ${{ github.event }}
+    - uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        name: wasm
-        path: pkg
+        upload_url: ${{ github.event.release.upload_url }}
+        asset_path: ./pkg/package.json
+        asset_name: package.json
