--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,4 +28,4 @@ jobs:
     - name: install wasm-pack
       run: cargo install wasm-pack
     - name: Build
-      run: wasm-pack build --target web
+      run: wasm-pack build
