--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Build
+    - name: Add target
       run: rustup target add wasm32-unknown-unknown
     - name: Build
       run: cargo build --release --target wasm32-unknown-unknown
